--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,40 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
+nav{
+
+  background-color: rgba(0, 0, 0, 1);
 }
 
-a,
-.green {
+.wrapper{
+  margin: 1% 1% 1% 1%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  background-color: blue;
+  width: 100%;
+}
+
+.content{
+  margin: 1% 7%;
+}
+a{
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+  color: black;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(160, 13%, 53%, 0.2);
+    
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
   }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
+} */
