--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,15 +1,19 @@
-@import './base.css';
-
 *{
   font-family: Arial, Helvetica, sans-serif;
+  
 }
-nav{
 
+div > a{
+  color: black;
+}
+
+nav{
+  color: white;
   background-color: rgba(0, 0, 0, 1);
 }
 
 .wrapper{
-  margin: 1% 1% 1% 1%;
+  margin: 1% 5%;
   display: grid;
   align-items: center;
   justify-content: center;
@@ -18,11 +22,11 @@ nav{
 }
 
 .content{
-  margin: 1% 7%;
+  margin: 1% 17%;
 }
 a{
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 @media (hover: hover) {
@@ -30,6 +34,24 @@ a{
     background-color: hsla(160, 13%, 53%, 0.2);
     
   }
+}
+white-text{
+  color: white;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+  gap: 20px; /* Adjust the gap between cards as needed */
+}
+
+.center{
+  display: grid;
+  align-items: center;
+  /* align-self: center; */
+  justify-content: center;
+  
+  margin: 20vmin;
 }
 
 /* @media (min-width: 1024px) {
